# DP_Projects

./: .gitignore  package-lock.json  package.json  turbo.json
.github/workflows/: deploy.yml
apps/dia-calendar/: .env.example  .gitignore  dia-calendar.md  package.json
apps/dia-calendar/src/: CalendarPage.tsx  main.tsx
apps/dia-chat/: dia-chat.md  index.html  package.json  pyproject.toml  requirements.txt
apps/dia-chat/backend/: main.py  schemas.py
apps/dia-chat/backend/agents/: chat.py
apps/dia-chat/frontend/: package-lock.json  package.json
apps/dia-chat/frontend/src/: index.css  index.ts
apps/dia-chat/frontend/src/components/: AssistMe.css  AssistMe.tsx
apps/dia-chat/src/: main.tsx
apps/dia-chat/src/components/: AssistMe.css  AssistMe.tsx
apps/dia-home/: dia-home.md  package.json  tsconfig.json  vite.config.js
apps/dia-home/src/: main.tsx
apps/dia-map/: dia-map.md  index.html  package.json  vite.config.js
apps/dia-map/src/: MapPage.tsx  main.tsx
apps/dia-website/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
apps/dia-website/src/: App.css  App.tsx  main.tsx
